# grantnite-giftcard

./: .gitignore  README.md  deploy-idl.js  env-config.txt  package-lock.json  package.json  remove-console.sh
gift-card-frontend/: EMAIL_SETUP.md  HELIUS_SETUP.md  README.md  clean-install.sh  middleware.ts  next.config.js  package-lock.json  package.json  start-dev.sh  tailwind.config.js
gift-card-frontend/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
gift-card-frontend/app/components/: Document.tsx  WalletInitializer.tsx  auto-fix.tsx  canvas-qr-code.tsx  card-redemption-checker.tsx  client-layout.tsx  client-provider.tsx  cursor-follower.tsx  error-boundary.tsx  home-client.tsx  home-wrapper.tsx  (+9 more)
gift-card-frontend/src/: middleware.ts
gift-card-frontend/types/: borsh.d.ts
gift-card-program/: Cargo.toml
gift-card-program/src/: lib.rs
gift-protocol/: Anchor.toml  Cargo.toml  README.md  build.sh  deploy-idl.js  deploy.sh  fix-permissions.sh  fix-simple.sh  initialize-protocol.js  package-lock.json  package.json
gift-protocol/programs/gift-protocol/: Cargo.toml
gift-protocol/programs/gift-protocol/src/: errors.rs  lib.rs  state.rs
gift-protocol/programs/gift-protocol/src/instructions/: create_gift_card.rs  create_governance_token.rs  create_proposal.rs  create_referral.rs  finalize_proposal.rs  initialize.rs  mod.rs  redeem_gift_card.rs  stake_treasury_funds.rs  vote_on_proposal.rs
gift-protocol/programs/protocol/: Cargo.toml
gift-protocol/programs/protocol/src/: lib.rs
gift-protocol/tests/: gift-protocol.ts
(+40 files in other folders)
