[package]
name = "protocol"
version = "0.1.0"
description = "Gift Card Protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "protocol"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1" 